# aria2-server-gui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup-envs/: action.yml
.github/workflows/: docs.yml  lint-test.yml  publish.yml
scripts/: alembic.py  gen_ref_pages.py
src/aria2_server/: __init__.py  logger.py
src/aria2_server/_cmd/: __init__.py
src/aria2_server/_gui/components/: aria_ng_iframe.py  aria_ng_iframe.vue  q_form.py  q_form.vue
src/aria2_server/app/: __init__.py  main.py
src/aria2_server/app/_api/: __init__.py  _auth.py
src/aria2_server/app/_core/aria2/: __init__.py
src/aria2_server/app/_core/auth/: __init__.py  dependencies.py
src/aria2_server/app/_subapp/: __init__.py  _aria_ng.py
src/aria2_server/app/core/: _server_config.py  _static_files.py
src/aria2_server/app/core/_aria2/: __init__.py
src/aria2_server/app/core/_auth/: __init__.py  _api_key.py  _core.py  _dependencies.py
src/aria2_server/app/core/_tools/: __init__.py  _get_page_routes.py  _make_args_required.py  _namepace_mixin.py
src/aria2_server/app/core/_utils/: dependencies.py
src/aria2_server/app/lifespan/: __init__.py
src/aria2_server/app/server/: __init__.py  _core.py  utils.py
src/aria2_server/app/server/_core/: __init__.py
src/aria2_server/app/server/_core/_api/: __init__.py  _aria2.py  _auth.py
src/aria2_server/app/server/_core/_subapp/: __init__.py
src/aria2_server/cli/: __init__.py  launch.py
src/aria2_server/cli/utils/: __init__.py  mkcert.py
src/aria2_server/config/: __init__.py  schemas.py
src/aria2_server/db/: __init__.py  _core.py
src/aria2_server/db/access_token/: __init__.py  models.py
src/aria2_server/db/base/: __init__.py  _models.py
src/aria2_server/db/migrations/: __init__.py  __main__.py  alembic.ini
src/aria2_server/db/migrations/_alembic/: README  env.py
src/aria2_server/db/migrations/alembic/versions/: e4da9dee1709_v0.py
src/aria2_server/db/server_config/: __init__.py  models.py
src/aria2_server/db/user/: __init__.py  models.py  schemas.py
src/aria2_server/static/: __init__.py
src/aria2_server/types/: _types.py
src/pyproject_template/: __init__.py
tests/: conftest.py  test_launch.py  test_make_pytest_happt.py
